--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,177 @@
-.App {
-  text-align: center;
+
+.mainContainer{
+  width: 100%;
+  height: 100vh;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.container1{
+  width: 40%;
+  height: 500px;
+  background-color: pink;
+  
+  
+  
+}
+#imagecontainer1{
+  display: none;
+  
+}
+.image1,.image2{
+  position: relative;
+  left: 20vw;
+  top: -9px;
+}
+#imagecontainer2{
+  display: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.imageContainer{
+  width: 40%;
+  height: 50px;
+  background-color: red;
+  position: absolute;
+  bottom: 8vh;
+  left: 29.5vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+.image{
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
+.basicText{
+  margin-left: 15vw;
+ position: relative;
+ top: 20px;
+}
+.inputName{
+  margin-left: 10vw;
+  margin-top: 8vh;
+  width: 300px;
+  height: 35px;
+  
+}
+.container2{
+  width: 40%;
+  height: 500px;
+  background-color: pink;
+  display: none;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+}
+.documentText{
+  margin-left: 13vw;
+
+}
+.documentInputs{
+   margin-left: 8vw;
+}
+.input1{
+  margin-left: 5vw;
+}
+.input2{
+  margin-left: 3.8vw;
+}
+.input3{
+  margin-left: 2.1vw;
+}
+.input4{
+  margin-left: 8vw;
+}
+.input5{
+  margin-left: 3.4vw;
+}
+.input6{
+  margin-left: 8.7vw;
+}
+.input7{
+  margin-left: 11vw;
+}
+#documentInputs7{
+  position: relative;
+  top: 30px;
+
+}
+#documentInputs{
+  position: relative;
+  top: 50px;
+}
+#documentInputs1{
+  position: relative;
+  top: 70px;
+}
+#documentInputs2{
+  position: relative;
+  top: 90px;
+}
+#documentInputs3{
+  position: relative;
+  top: 110px;
+}
+#documentInputs4{
+  position: relative;
+  top: 130px;
+}
+#documentInputs5{
+  position: relative;
+  top: 150px;
+}
+#documentInputs6{
+  position: relative;
+  top: 170px;
+}
+.container3{
+  width: 40%;
+  height: 500px;
+  background-color: pink;
+  display: none;
+}
+.statementText{
+  margin-left: 12vw;
+  position: relative;
+  top: 2vh;
+}
+.statement1{
+  margin-left: 3vw;
+  position: relative;
+  top: 5vh;
+}
+#statement2{
+  position: relative;
+  top: 10vh;
+}
+#statement3{
+  position: relative;
+  top: 18vh;
+}
+.statementinputs{
+  margin-left: 3vw;
+  position: relative;
+  top: 2vh;
+}
+.container4{
+  width: 40%;
+  height: 500px;
+  background-color: pink;
+  display: none;
+}
+.interviewText{
+  margin-left: 12vw;
+  position: relative;
+  top: 2vh;
+}
+.interviewInputs{
+  margin-left: 5vw;
+  position: relative;
+  top: 3vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#submitbut{
+  position: relative;
+  bottom: 22vh;
+  margin-left: 46vw;
+  display: none;
 }
